--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CADASTRO</title>
-    <link rel="stylesheet" href="estilo.css">
-    <link rel="shortcut icon" href="img/3x3 branco.png" type="image/x-icon">
+    <link rel="stylesheet" href="static/estilo.css">
+    <link rel="shortcut icon" href="static/img/3x3 branco.png" type="image/x-icon">
 </head>
 <body class="CADASTRO">
         <div class="caixa2">
