--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>pagina inicial</title>
-    <link rel="shortcut icon" href="img/3x3 branco.png" type="imagem/x-icon">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="shortcut icon" href="static/img/3x3 branco.png" type="imagem/x-icon">
+    <link rel="stylesheet" href="static/estilo.css">
 </head>
 <body>
     <div class="pag-inicial">
@@ -13,7 +13,7 @@
         width="400">
 
         <div class="botão">
-            <a href="login.html">ENTRE</a>
+            <a href="/login">ENTRE</a>
             <a href="cadastro.html">CADASTRO</a>
         </div>
 
