--- a/templates/primeira pagina.html
+++ b/templates/primeira pagina.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="static/estilo.css">
 </head>
 <body>
     <div class="imagem3x3">
-        <img id="perfil" src="img/perfil.png" alt="imagem perfil">
-        <img src="img/3x3 branco png.png" alt="3x3branco" width="400">
+        <img id="perfil" src="static/img/perfil.png" alt="imagem perfil">
+        <img src="static/img/3x3 branco png.png" alt="3x3branco" width="400">
         
 
     </div>
