--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div class="pag-inicial">
-        <img src="img/3x3 branco.png"
+        <img src="static/img/3x3 branco.png"
         width="400">
 
         <div class="botão">
             <a href="/login">ENTRE</a>
-            <a href="cadastro.html">CADASTRO</a>
+            <a href="/cadastro">CADASTRO</a>
         </div>
 
-        <img src="img/quadra 4.jfif" alt="quadra de basquete 3x3.">
+        <img src="static/img/quadra 4.jfif" alt="quadra de basquete 3x3.">
     </div>
 </body>
 </html>
