--- a/templates/login.html
+++ b/templates/login.html
@@ -15,7 +15,7 @@
     <p>SENHA</p>
     <input type="passoword" name="senha">
     <br>
-    <a href="">ENTRAR</a>
+    <a href="/primeira pagina">ENTRAR</a>
 
    </div>
     
