--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -20,7 +20,7 @@
             <input type="password" name="criarsenha">
             <br>
 
-            <a href="">CRIAR</a>
+            <a href="/primeira pagina">CRIAR</a>
         </div> 
 
     
