--- a/templates/pagina.html
+++ b/templates/pagina.html
@@ -8,10 +8,10 @@
 </head>
 <body class="pagina"> 
     <div class="perfil">
-        <img src="img/perfil.png" alt="">
+        <img src="static/img/perfil.png" alt="">
     </div>
     <div class="fiba">
-        <img src="img/FIBA 3x3 White Version.png" alt="">
+        <img src="static/img/FIBA 3x3 White Version.png" alt="">
         
     </div>
 </body>
